<?xml version="1.0"?>
<package format="2">
  <name>testit_explorer</name>
  <version>0.0.1</version>
  <description>The testit_explorer package</description>

  <maintainer email="ingmar@liibert.ee">Marti Ingmar Liibert</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python</exec_depend>

  <export>
  </export>
</package>
